--- a/index.html
+++ b/index.html
@@ -55,10 +55,98 @@
     </section>
 
     <!-- About  -->
+    <section class="about">
+        <div class="container">
+            <h2>Learn more about me and my habilities</h2>
+            <p>I am passionate about everything that has to do with Digital Design and Development. I enjoy working with
+                enthusiastic people who want to solve problems through beautiful design and experiences.</p>
+            <div class="row container-2">
+                <div class="col-12 col-md-6">
+                    <h3>Frontend Development</h3>
+                    <p>I try to impose my style as a designer within the development of web sites and applications to
+                        provide original customer service.</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h3>UX/UI Design</h3>
+                    <p>I always strive to create memorable experiences that are aesthetically appealing, functional and
+                        distinctive.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Projects  -->
+    <section class="projects">
+        <div class="container">
+            <h2>My latest work</h2>
+            <p>The best way for you to understand my work is to take a look at it, here I leave you the best ones that I
+                did so that you can analyze them.</p>
+            <div class="row container-2 projects-cards">
+                <div class="card col-12 col-md-6 mb-5">
+                    <img src="img/project.jpg" class="mb-2 img-fluid" alt="">
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto asperiores recusandae et dolore
+                        libero impedit itaque placeat officiis doloremque labore!</p>
+                    <div class="card-links"><a href=""><i class="bi bi-check-lg me-1"></i>Demo</a><a href=""><i
+                                class="bi bi-code me-1"></i>Code</a></div>
+                </div>
+                <div class="card col-12 col-md-6 mb-5">
+                    <img src="img/project.jpg" class="mb-2 img-fluid" alt="">
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto asperiores recusandae et dolore
+                        libero impedit itaque placeat officiis doloremque labore!</p>
+                    <div class="card-links"><a href=""><i class="bi bi-check-lg me-1"></i>Demo</a><a href=""><i
+                                class="bi bi-code me-1"></i>Code</a></div>
+                </div>
+                <div class="card col-12 col-md-6 mb-5">
+                    <img src="img/project.jpg" class="mb-2 img-fluid" alt="">
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto asperiores recusandae et dolore
+                        libero impedit itaque placeat officiis doloremque labore!</p>
+                    <div class="card-links"><a href=""><i class="bi bi-check-lg me-1"></i>Demo</a><a href=""><i
+                                class="bi bi-code me-1"></i>Code</a></div>
+                </div>
+                <div class="card col-12 col-md-6 mb-5">
+                    <img src="img/project.jpg" class="mb-2 img-fluid" alt="">
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto asperiores recusandae et dolore
+                        libero impedit itaque placeat officiis doloremque labore!</p>
+                    <div class="card-links"><a href=""><i class="bi bi-check-lg me-1"></i>Demo</a><a href=""><i
+                                class="bi bi-code me-1"></i>Code</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Contact  -->
+    <section class="contact">
+        <div class="container">
+            <h2>Contact me!</h2>
+            <p>Do you have a project in mind? Contact me to help you conclude that idea and solve your problem.</p>
+
+            <form id="form" class="form">
+                <div class="mb-3">
+                    <input type="text" class="form-control" name="name" placeholder="Name" required>
+                </div>
+                <div class="mb-3">
+                    <input type="email" class="form-control" name="email" placeholder="Email" required>
+                </div>
+                <div class="mb-3">
+                    <textarea type="email" class="form-control" name="message" rows="3" placeholder="Send a messagge..." required></textarea>
+                </div>
+                <div class="d-flex justify-content-end"><input class="btn" type="submit" id="button" value="Enviar"></div>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer  -->
+    <div class="footer">
+        <div class="links">
+            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href=""><i class="bi bi-github"></i></a>
+        </div>
+        <p>All rigths reserved Juan Cruz Cagnoni ©</p>
+    </div>
 
     <!-- Javascript Bootstrap. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
