--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan Cruz Cagnoni | Frontend Developer.</title>
+    <link rel="shortcut icon" href="img/logo(wh).svg" type="image/x-icon">
     <!-- CSS Bootstrap. -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -19,7 +20,8 @@
     <!-- Nav  -->
     <nav class="navbar navbar-expand-md position-fixed w-100 top-0 z-index-100">
         <div class="container d-flex">
-            <a class="navbar-brand" href="#"><img src="img/logo(wh).svg" alt="Logo Maria Brewing." width="40" class="img-fluid logo-image"></a>
+            <a class="navbar-brand" href="#"><img src="img/logo(wh).svg" alt="Logo Maria Brewing." width="40"
+                    class="img-fluid logo-image"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,10 +45,11 @@
                     <h1>Hi, I´m Juan Cruz Cagnoni <br> <span>Frontend Developer</span></h1>
                     <p>I’m from Buenos Aires, Argentina and I work from my studio to the world solving problems.</p>
                     <div class="links">
-                        <a href=""><i class="bi bi-linkedin"></i></a>
-                        <a href=""><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/juancruzcagnoni/" target="_blank"><i
+                                class="bi bi-linkedin"></i></a>
+                        <a href="https://github.com/juancruzcagnoni" target="_blank"><i class="bi bi-github"></i></a>
                     </div>
-                    <a href="" class="cv"><i class="bi bi-paperclip"></i>Download CV</a>
+                    <a href="img/cv.pdf" target="_blank" class="cv"><i class="bi bi-paperclip"></i>Download CV</a>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="container-image-main">
@@ -61,7 +64,8 @@
     <section class="about">
         <div class="container">
             <h2>Learn more about me and my habilities</h2>
-            <p class="p-info">I am passionate about everything that has to do with Digital Design and Development. I enjoy working with
+            <p class="p-info">I am passionate about everything that has to do with Digital Design and Development. I
+                enjoy working with
                 enthusiastic people who want to solve problems through beautiful design and experiences.</p>
             <div class="row container-2">
                 <div class="col-12 col-md-6">
@@ -82,7 +86,8 @@
     <section class="projects">
         <div class="container">
             <h2>My latest work</h2>
-            <p class="p-info">The best way for you to understand my work is to take a look at it, here I leave you the best ones that I
+            <p class="p-info">The best way for you to understand my work is to take a look at it, here I leave you the
+                best ones that I
                 did so that you can analyze them.</p>
             <div class="row container-2 projects-cards">
                 <div class="card col-12 col-md-6 mb-5">
@@ -125,7 +130,8 @@
     <section class="contact">
         <div class="container">
             <h2>Contact me!</h2>
-            <p class="p-info">Do you have a project in mind? Contact me to help you conclude that idea and solve your problem.</p>
+            <p class="p-info">Do you have a project in mind? Contact me to help you conclude that idea and solve your
+                problem.</p>
             <form id="form" class="form">
                 <div class="mb-3">
                     <input type="text" class="form-control" name="name" placeholder="Name" required>
@@ -134,18 +140,25 @@
                     <input type="email" class="form-control" name="email" placeholder="Email" required>
                 </div>
                 <div class="mb-3">
-                    <textarea type="email" class="form-control" name="message" rows="3" placeholder="Send a messagge..." required></textarea>
+                    <textarea type="email" class="form-control" name="message" rows="3" placeholder="Send a messagge..."
+                        required></textarea>
                 </div>
                 <div class="d-flex justify-content-end"><input type="submit" id="button" value="Send"></div>
             </form>
+            <script type="text/javascript"
+                src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+            </script>
+            <script type="text/javascript">
+                emailjs.init('nSXrSnAaA6JA0GZPj')
+            </script>
         </div>
     </section>
 
     <!-- Footer  -->
     <div class="footer">
         <div class="links">
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/juancruzcagnoni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/juancruzcagnoni" target="_blank"><i class="bi bi-github"></i></a>
         </div>
         <p>All rigths reserved Juan Cruz Cagnoni ©</p>
     </div>
@@ -154,6 +167,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
+
+    <!-- Javascript  -->
+    <script src="script.js"></script>
 </body>
 
 </html>
